# dr_duck

./: .gitignore  README.md  pyproject.toml
src/dr_duck/: __init__.py  connection.py  helpers.py
src/dr_duck/configs/: __init__.py  auth.py  paths.py
src/dr_duck/hf/: __init__.py  io.py  location.py
src/dr_duck/motherduck/: __init__.py  connector.py
src/dr_duck/utils/: __init__.py  display.py
tests/: test_helpers.py
