[project]
name = "dr-duck"
version = "0.1.0"
description = "DuckDB and MotherDuck utilities for data ingestion and HuggingFace integration"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.20.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
marimo = ["marimo>=0.17.0"]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_duck"]

[tool.ruff]
line-length = 88
include = ["src/**/*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
