[project]
name = "dr-duck"
version = "0.1.0"
description = "Simple MotherDuck connection utilities"
readme = "README.md"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0", "pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dr_duck"]

[tool.ruff]
line-length = 88
include = ["src/**/*.py"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
